fix js, add project

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,7 @@
             <h3 class="center-align">Portfolio Projects</h3>
             <hr>
             <div class="row">
+                    <!-- Projects I've completed -->
 
                 <div id="proj1" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -87,67 +88,64 @@
                 </div>
 
                 <div id="proj2" class="card animated col s10 m5 offset-m2 l5 offset-l2">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/friend-finder.png">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Friend Finder App (Full Stack)</span>
-                            <i class="material-icons right">more_vert</i>
-                            </span>
-                            <p>
-                                <a target="_blank" href="https://secure-chamber-17235.herokuapp.com/">Link (Heroku)</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Friend Finder Full Stack App
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>
-                                <br>
-                            </p>
-                            <ul>
-                                <span id="heading">Technologies Used:</span>
-                                <li>Materialize</li>
-                                <li>Express.js Server</li>
-                                <li>Javascript</li>
-                                <li>node.js</li>
-                                <li>npm packages: express, body-parser, path</li>
-                            </ul>
-                            <a href="https://github.com/cetges86/friend-finder-app">Github Repo</a>
-                        </div>
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/friend-finder.png">
                     </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Friend Finder App (Full Stack)</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://secure-chamber-17235.herokuapp.com/">Link (Heroku)</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Friend Finder Full Stack App
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Materialize</li>
+                            <li>Express.js Server</li>
+                            <li>Javascript</li>
+                            <li>node.js</li>
+                            <li>npm packages: express, body-parser, path</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/friend-finder-app">Github Repo</a>
+                    </div>
+                </div>
 
-                    <div id="proj3" class="card animated col s10 m5 l5">
-                            <div class="card-image waves-effect waves-block waves-light">
-                                <img class="activator z-depth-5" src="assets/images/fallchrissq.jpg">
-                            </div>
-                            <div class="card-content">
-                                <span class="card-title activator grey-text text-darken-4">Chris Etges Photography</span>
-                                <i class="material-icons right">more_vert</i>
-                                </span>
-                                <p>
-                                    <a target="_blank" href="https://cetges86.github.io/CEtges-Photo">Link</a>
-                                </p>
-                            </div>
-                            <div class="card-reveal">
-                                <span class="card-title grey-text text-darken-4">Christopher Etges Photography
-                                    <i class="material-icons right">close</i>
-                                </span>
-                                <p>Webpage built for my photography hobby.
-                                    <br>
-                                </p>
-                                <ul>
-                                    <span id="heading">Technologies Used:</span>
-                                    <li>Bootstrap</li>
-                                    <li>Javascript/jQuery</li>
-                                    <li>Built using a Bootstrap template provided by freehtml6.co</li>
-                                </ul>
-                                <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
-                            </div>
-                        </div>
-
-
-
+                <div id="proj3" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator z-depth-5" src="assets/images/fallchrissq.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Chris Etges Photography</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://cetges86.github.io/CEtges-Photo">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Christopher Etges Photography
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Webpage built for my photography hobby.
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>Bootstrap</li>
+                            <li>Javascript/jQuery</li>
+                            <li>Built using a Bootstrap template provided by freehtml6.co</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/CEtges-Photo">Github Repo</a>
+                    </div>
+                </div>
 
                 <div id="proj4" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -179,6 +177,7 @@
                         <a href="">Github Repo</a>
                     </div>
                 </div>
+
                 <div id="proj5" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/anatomy.png">
@@ -207,7 +206,6 @@
                         <a href="https://github.com/cetges86/TriviaGame">Github Repo</a>
                     </div>
                 </div>
-
 
                 <div id="proj6" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -268,65 +266,67 @@
                     </div>
                 </div>
 
-                
                 <div id="proj8" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/train.jpg">
+                        <img class="activator" src="assets/images/videogames.jpg">
                     </div>
                     <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Train Scheduler</span>
+                        <span class="card-title activator grey-text text-darken-4">Article Scraper</span>
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="https://cetges86.github.io/Train-Schedule">Link</a>
+                            <a target="_blank" href="https://obscure-ridge-73729.herokuapp.com/">Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Train Schedule Plus
+                        <span class="card-title grey-text text-darken-4">
                             <i class="material-icons right">close</i>
                         </span>
-                        <p>Simple Firebase Schedule Tool
+                        <p>Video Game Article Scraper
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML/CSS</li>
+                            <li>Javascript/jQuery</li>
+                            <li>Express.js</li>
+                            <li>Bootstrap 4.0</li>
+                            <li>Handlebars</li>
+                            <li>node.js</li>
+                            <li>mongoDB &amp; Mongoose</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/vidja-game-scraper">Github Repo</a>
+                    </div>
+                </div>
+
+                <div id="proj9" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/node.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">LIRI Bot Node App</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://github.com/cetges86/liri-node-app">Repo Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">LIRI Node Application
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie information
                             <br>
                         </p>
                         <ul>
                             <span id="heading">Technologies Used:</span>
                             <li>Javascript</li>
-                            <li>Firebase</li>
-                            <li>Bootstrap</li>
-                            <li>HTML/CSS</li>
+                            <li>node.js</li>
+                            <li>npm packages: inquirer, dotenv, twitter, spotify-node-api, request</li>
                         </ul>
-                        <a href="https://github.com/cetges86/Train-Schedule">Github Repo</a>
+                        <a href="https://github.com/cetges86/liri-node-app">Github Repo</a>
                     </div>
                 </div>
-
-                <div id="proj9" class="card animated col s10 m5 l5">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/node.png">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">LIRI Bot Node App</span>
-                            <i class="material-icons right">more_vert</i>
-                            </span>
-                            <p>
-                                <a target="_blank" href="https://github.com/cetges86/liri-node-app">Repo Link</a>
-                            </p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">LIRI Node Application
-                                <i class="material-icons right">close</i>
-                            </span>
-                            <p>Node CLI Application that can display tweets, search Spotify for songs, or omdb for Movie information
-                                <br>
-                            </p>
-                            <ul>
-                                <span id="heading">Technologies Used:</span>
-                                <li>Javascript</li>
-                                <li>node.js</li>
-                                <li>npm packages: inquirer, dotenv, twitter, spotify-node-api, request</li>
-                            </ul>
-                            <a href="https://github.com/cetges86/liri-node-app">Github Repo</a>
-                        </div>
-                    </div>
 
                 <div id="proj10" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -359,6 +359,7 @@
                         <a href="https://github.com/cetges86/burger">Github Repo</a>
                     </div>
                 </div>
+
                 <div id="proj11" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/food.jpeg">
@@ -389,6 +390,7 @@
                         <a href="https://github.com/cetges86/go-food-yourself">Github Repo</a>
                     </div>
                 </div>
+
                 <div id="proj12" class="card animated col s10 m5 offset-m2 l5 offset-l2">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator" src="assets/images/videogames.jpg">
@@ -422,8 +424,39 @@
                     </div>
                 </div>
 
+                <div id="proj13" class="card animated col s10 m5 l5">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/simpsons.png">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">React Memory Game</span>
+                        <i class="material-icons right">more_vert</i>
+                        </span>
+                        <p>
+                            <a target="_blank" href="https://simpsons-memory.herokuapp.com/">Link</a>
+                        </p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">
+                            <i class="material-icons right">close</i>
+                        </span>
+                        <p>The Simpsons React Memory Game
+                            <br>
+                        </p>
+                        <ul>
+                            <span id="heading">Technologies Used:</span>
+                            <li>HTML/CSS</li>
+                            <li>React/ JSX</li>
+                            <li>Javascript ES6</li>
+                            <li>Bootstrap 4.0</li>
+                            <li>Animate.css</li>
+                        </ul>
+                        <a href="https://github.com/cetges86/react-memory-game">Github Repo</a>
+                    </div>
+                </div>
+
             </div>
-        
+
         </div>
 
     </main>
