--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             <div id="jumbotron" class="valign-wrapper">
                 <div class="row">
                     <div class="col s12 center-block">
-                        <h1 class="animated tada center-align">Christopher Etges</h1>
+                        <h1 class="animated flipInX center-align">Christopher Etges</h1>
                     </div>
                     <div class="col s12 center-block">
-                        <h4 class="animated fadeInUpBig center-align">Full Stack Web Developer</h4>
+                        <h4 class="animated flipInX center-align">Full Stack Web Developer</h4>
                     </div>
                     
                     <div class="center-align">
