--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="row">
                 <div class="col s1 m2 l2"></div>
                 <div class="col s10 m8 l8">
-                    <img id="headshot" class="clearfix animated z-depth-5" src="assets/images/headshot.jpg" alt="headshot of Chris Etges">
-                    <p id="bioP" class="animated">Hi, I'm Chris, and I have recently begun my journey towards becoming a full time web-developer. I am
+                    <img id="headshot" class="clearfix animated z-depth-5" src="assets/images/fallchrissq.jpg" alt="headshot of Chris Etges">
+                    <p id="bioP" class="animated">Hi, I'm Chris, and I am hard at work towards becoming a full time web-developer. I am
                         currently enrolled in the full-stack web development program at the University of Denver. I started
                         learning HTML and CSS through codeacademy, and continued with courses through the University of Michigan
                         online (via Coursera) in Javascript and Responsive Design. I have since become a full-stack developer
