--- a/portfolio.html
+++ b/portfolio.html
@@ -433,7 +433,7 @@
                         <i class="material-icons right">more_vert</i>
                         </span>
                         <p>
-                            <a target="_blank" href="https://simpsons-memory.herokuapp.com/">Link</a>
+                            <a target="_blank" href="https://simpsons-react.herokuapp.com/">Link</a>
                         </p>
                     </div>
                     <div class="card-reveal">
