tweaks to portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,8 @@
             <hr>
             <div class="row">
                 <!-- Projects I've completed -->
-
+                <h6 class="center teal-text">click on card images for details</h6>
+                <br>
                 <div id="proj1" class="card animated col s10 m5 l5">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator z-depth-5" src="assets/images/niteowl.png">
