--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <nav>
                 <div class="nav-wrapper">
                     <a href="index.html" class="brand-logo left">
-                        <img alt="coding cartoon" id="nav-logo" src="./assets/images/logo.png" /></a>
+                        <img alt="coding cartoon" id="nav-logo" src="./assets/images/logo.png" />
+                    </a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger">
                         <i class="material-icons">menu</i>
                     </a>
@@ -69,26 +70,26 @@
                         <h4 class="animated flipInX center-align">Full Stack Web Developer</h4>
                     </div>
                     <div class="center-align">
-                            <i id="down-arrow" class="large material-icons animated">arrow_downward</i>
+                        <i id="down-arrow" class="large material-icons animated">arrow_downward</i>
                     </div>
                 </div>
             </div>
         </div>
         <!--Bio-->
         <section id="bio">
-            <div class="container">
-                <div class="row valign-wrapper">
-                    <div class="col s6 m6 l6">
-                        <img alt="coding cartoon" id="headshot" class="clearfix animated z-depth-4" src="./assets/images/headshot2.jpg" />
+            <div class="row">
+                <div id="bio-container" class="container valign-wrapper">
+                    <div class="col s12 m5 l6">
+                        <img alt="portait" id="headshot" class="clearfix animated z-depth-4" src="./assets/images/headshot2.jpg" />
                     </div>
-                    <div class="col s6 m6 l6">
-                        <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, full stack web-developer. I finished a bootcamp, more specifically a full-stack web
-                            development program at the University of Denver. I started learning HTML and CSS through codeacademy,
-                            and continued with courses through the University of Michigan online (via Coursera) in Javascript
-                            and Responsive Design. I have since become familiar with many popular libraries and frameworks,
-                            both front and back end. I've been interested in tech as a hobby for my entire life. I'm an avid
-                            gamer, and love photography and travel. You'll see a few of my website projects in my portfolio,
-                            and feel free to reach out to me for custom work or questions. Thanks!
+                    <div class="col s12 m7 l6">
+                        <p id="bioP" class="z-depth-4 animated">Hi, I'm Chris, full stack web-developer. I completed a full-stack web development program with the
+                            University of Denver. I started learning HTML and CSS through codeacademy, and continued with
+                            courses through the University of Michigan online (via Coursera) in Javascript and Responsive
+                            Design. I have since become familiar with many popular libraries and frameworks, both front and
+                            back end. I've been interested in tech as a hobby for my entire life. I'm an avid gamer, and
+                            love photography and travel. You'll see a few of my website projects in my portfolio, and feel
+                            free to reach out to me for custom work or questions. Thanks!
                         </p>
                     </div>
                 </div>
