messing with contact buttons

--- a/contact.html
+++ b/contact.html
@@ -57,19 +57,17 @@
             <!--buttons for email and phone contact -->
             <h1 class="center-align">Contact Me</h1>
             <div class="row center">
-                    
-                    <button class="btn-large waves-effect waves-light contact-btn" type="submit" action="mailto:c.etges86@gmail.com">
-                        <i class="material-icons left">email</i>Email
-                    </button>
-                    <button class="btn-large waves-effect waves-light disabled contact-btn">
-                        <i class="material-icons left">local_phone</i>Call Me - (303)518.2933
-                    </button>
 
-                    <button href="./assets/files/Chris Etges Resume 2018.pdf" download="Chris Etges Resume 2018.pdf"
-                     class="btn-large waves-effect waves-light contact-btn">
-                        <i class="material-icons left">file_download</i>Resume
-                    </button>
-                
+                <a href="mailto:c.etges86@gmail.com" class="btn-large waves-effect waves-light contact-btn">
+                    <i class="material-icons left">email</i>Email
+                </a>
+                <button class="btn-large waves-effect waves-light disabled contact-btn">
+                    <i class="material-icons left">local_phone</i>Call Me - (303)518.2933
+                </button>
+                <a href="./assets/files/Chris Etges Resume 2018.pdf" download class="btn-large waves-effect waves-light contact-btn">
+                    <i class="material-icons left">file_download</i>Resume
+                </a>
+
             </div>
 
 
