fixed all contact buttons

--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             <h1 class="center-align">Contact Me</h1>
             <div class="row center">
 
-                <a href="mailto:c.etges86@gmail.com" class="btn-large waves-effect waves-light contact-btn">
+                <a href="mailto:c.etges86@gmail.com" target="_blank" class="btn-large waves-effect waves-light contact-btn">
                     <i class="material-icons left">email</i>Email
                 </a>
                 <button class="btn-large waves-effect waves-light disabled contact-btn">
