update paragraph, resume

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,6 @@
 
 <body>
     <header>
-
         <!-- Primary Nav Bar -->
         <div class="navbar-fixed">
             <nav>
@@ -34,7 +33,6 @@
                     </ul>
                 </div>
             </nav>
-
             <!-- Sidebar on Mobile -->
             <ul class="sidenav" id="mobile-demo">
                 <li>
@@ -52,7 +50,6 @@
     </header>
 
     <main>
-
         <div class="container">
             <!--buttons for email and phone contact -->
             <h1 class="center-align">Contact Me</h1>
@@ -64,12 +61,11 @@
                 <button class="btn-large waves-effect waves-light disabled contact-btn">
                     <i class="material-icons left">local_phone</i>Call Me - (303)518.2933
                 </button>
-                <a href="./assets/files/Chris Etges Resume 2018.pdf" download class="btn-large waves-effect waves-light contact-btn">
+                <a href="./assets/files/chrisEtgesResume9.5.pdf" download class="btn-large waves-effect waves-light contact-btn">
                     <i class="material-icons left">file_download</i>Resume
                 </a>
 
             </div>
-
 
             <div class="row">
                 <h3 class="center-align">Visit Me</h3>
